2016-07-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Remove debug option from test.

	* tests/test-utf8-wbr.sh:
	  - Remove '-x' sh option.

2016-07-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix exit status on error.

	* tests/test-simple.sh:
	  - On error, exit with code 1, as -1 is illegal for sh.

2016-07-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add test case for UTF-8 word break code.

	* tests/Makefile.am, +tests/test-utf8-wbr.sh:
	  - Add test case for non-ASCII word break string,
	    for Issue #1.

2016-07-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add test case for long line.

	* tests/Makefile.am, +tests/test-long.sh,
	  +tests/long.txt, +tests/long-wseg.txt:
	  - Add test script and sample input with long line.

2016-07-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add test suite, with simple test case.

	* configure.ac, Makefile.am:
	  - Add tests/ subdir.

	* +tests/Makefile.am, +tests/test-simple.sh:
	  - Add a simple test case.

2016-07-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix mem leak on file format error.

	* src/wordseg.cpp (main):
	  - Exit word segmentation before exiting program.

2016-07-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Check memory failure in InitWordSegmentation().

	* src/wordseg.cpp (InitWordSegmentation):
	  - Exit on memory allocation failure.

2016-07-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Simplify InitWordSegmentation().

	* src/wordseg.cpp (InitWordSegmentation):
	  - Rewrite to return (AbsWordSeg*), with NULL indicating failure.
	  - Simplify method determination logic, with fallback.
	  - Simplify dictionary trial logic.

	* src/wordseg.cpp (main):
	  - Call InitWordSegmentation() with new convention.

2016-07-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Support longer line length.

	* src/worddef.h (MAXLEN, MAXSEP):
	  - Increase max line length and max words by 3 times,