@@ -2,6 +2,7 @@ TESTS = \
 	test-simple.sh \
 	test-long.sh \
 	test-utf8-wbr.sh \
+	test-latex.sh \
 	$(NULL)
 
 AM_TESTS_ENVIRONMENT = \
@@ -14,6 +15,7 @@ check_SCRIPTS = \
 	test-simple.sh \
 	test-long.sh \
 	test-utf8-wbr.sh \
+	test-latex.sh \
 	$(NULL)
 
 DISTCLEANFILES = \
@@ -24,4 +26,6 @@ EXTRA_DIST = \
 	$(check_SCRIPTS) \
 	long.txt \
 	long-wseg.txt \
+	thai-latex.tex \
+	thai-latex-wseg.tex \
 	$(NULL)
