@@ -1,0 +1,19 @@
+\documentclass[a4paper]{article}
+\usepackage[utf8x]{inputenc}
+\usepackage[thai]{babel}
+\usepackage{fonts-tlwg}
+
+\title{เอกสาร \LaTeX{} ภาษา{\wbr}ไทย}
+\author{เพื่อ{\wbr}การ{\wbr}ทดสอบ}
+\date{}
+
+\begin{document}
+\maketitle
+
+กาล{\wbr}ครั้ง{\wbr}หนึ่ง{\wbr}นาน{\wbr}มา{\wbr}แล้ว ยัง{\wbr}มี{\wbr}กระต่าย{\wbr}ตัว{\wbr}หนึ่ง{\wbr}วิ่ง{\wbr}เล่น{\wbr}อยู่{\wbr}ใน{\wbr}ป่า ไป{\wbr}พบ{\wbr}เต่า{\wbr}ตัว{\wbr}หนึ่ง{\wbr}เดิน{\wbr}ต้วมเตี้ยม{\wbr}อยู่{\wbr}
+รู้สึก{\wbr}รำคาญ{\wbr}ใน{\wbr}ความ{\wbr}เชื่องช้า{\wbr}ของ{\wbr}เต่า จึง{\wbr}ท้า{\wbr}เต่า{\wbr}วิ่ง{\wbr}แข่ง{\wbr}กัน โดย{\wbr}ต่อ{\wbr}ให้{\wbr}เต่า{\wbr}ซึ่ง{\wbr}เชื่องช้า{\wbr}วิ่ง{\wbr}นำ{\wbr}หน้า{\wbr}ไป{\wbr}ก่อน{\wbr}
+
+กระต่าย{\wbr}ออก{\wbr}วิ่ง{\wbr}ทีหลัง{\wbr}ก็{\wbr}แซง{\wbr}หน้า{\wbr}เต่า{\wbr}อย่าง{\wbr}รวดเร็ว มอง{\wbr}กลับ{\wbr}หลัง{\wbr}มา{\wbr}ดู{\wbr}ก็{\wbr}ไม่{\wbr}เห็น{\wbr}เต่า{\wbr}วิ่ง{\wbr}ตาม{\wbr}มา{\wbr}
+จึง{\wbr}หยุด{\wbr}พัก{\wbr}ใต้{\wbr}ต้นไม้{\wbr}ใหญ่{\wbr}ต้น{\wbr}หนึ่ง ลม{\wbr}โชย{\wbr}พัด{\wbr}เอื่อย~{\wbr}ๆ ทำให้{\wbr}กระต่าย{\wbr}ผล็อย{\wbr}หลับ{\wbr}ไป{\wbr}
+จน{\wbr}กระทั่ง{\wbr}พลบค่ำ{\wbr}จึง{\wbr}รู้สึก{\wbr}ตัว{\wbr}ตื่น{\wbr}ขึ้น{\wbr}มา{\wbr}พบ{\wbr}ว่า{\wbr}เต่า{\wbr}เข้า{\wbr}เส้นชัย{\wbr}ไป{\wbr}นาน{\wbr}แล้ว{\wbr}
+\end{document}
