@@ -1,0 +1,19 @@
+\documentclass[a4paper]{article}
+\usepackage[utf8x]{inputenc}
+\usepackage[thai]{babel}
+\usepackage{fonts-tlwg}
+
+\title{เอกสาร \LaTeX{} ภาษาไทย}
+\author{เพื่อการทดสอบ}
+\date{}
+
+\begin{document}
+\maketitle
+
+กาลครั้งหนึ่งนานมาแล้ว ยังมีกระต่ายตัวหนึ่งวิ่งเล่นอยู่ในป่า ไปพบเต่าตัวหนึ่งเดินต้วมเตี้ยมอยู่
+รู้สึกรำคาญในความเชื่องช้าของเต่า จึงท้าเต่าวิ่งแข่งกัน โดยต่อให้เต่าซึ่งเชื่องช้าวิ่งนำหน้าไปก่อน
+
+กระต่ายออกวิ่งทีหลังก็แซงหน้าเต่าอย่างรวดเร็ว มองกลับหลังมาดูก็ไม่เห็นเต่าวิ่งตามมา
+จึงหยุดพักใต้ต้นไม้ใหญ่ต้นหนึ่ง ลมโชยพัดเอื่อย~ๆ ทำให้กระต่ายผล็อยหลับไป
+จนกระทั่งพลบค่ำจึงรู้สึกตัวตื่นขึ้นมาพบว่าเต่าเข้าเส้นชัยไปนานแล้ว
+\end{document}
